package com.project.booking.domain.enums;

public enum OrderFrequency {
    ONE_TIME,
    WEEKLY,     // -15%
    BIWEEKLY,   // -10%
    MONTHLY     // -5%
}
