package com.project.booking.domain.enums;

public enum OrderStatus {
    PENDING,
    CONFIRMED,
    IN_PROGRESS,
    COMPLETED,
    CANCELLED,
    REPLACEMENT_REQUESTED
}
