package com.project.order.domain.entity;

import jakarta.persistence.*;
import lombok.*;
import java.math.BigDecimal;
import java.time.LocalDateTime;
import java.util.UUID;

@Entity @Table(name = "cleaner_profiles", schema = "orders")
@Getter @Setter @NoArgsConstructor @AllArgsConstructor @Builder
@EqualsAndHashCode(of = "id") @ToString
public class CleanerProfileEntity {
    @Id @GeneratedValue(strategy = GenerationType.UUID) private UUID id;
    @Column(name = "user_id", nullable = false, unique = true) private UUID userId;
    @Column(name = "is_available", nullable = false) @Builder.Default private boolean isAvailable = true;
    @Column(name = "hourly_rate", nullable = false, precision = 10, scale = 2) @Builder.Default private BigDecimal hourlyRate = new BigDecimal("25.00");
    @Column(precision = 3, scale = 2) @Builder.Default private BigDecimal rating = new BigDecimal("5.00");
    @Column(name = "completed_orders_count", nullable = false) @Builder.Default private int completedOrdersCount = 0;
    @Column(columnDefinition = "TEXT") private String bio;
    @Column(name = "created_at", updatable = false) private LocalDateTime createdAt;
    @Column(name = "updated_at") private LocalDateTime updatedAt;
    @PrePersist protected void onCreate() { createdAt = updatedAt = LocalDateTime.now(); }
    @PreUpdate  protected void onUpdate() { updatedAt = LocalDateTime.now(); }
}
